WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40786
Don't throw away exception information for functions that use exceptions
https://bugs.webkit.org/show_bug.cgi?id=40786
Summary
Don't throw away exception information for functions that use exceptions
Oliver Hunt
Reported
2010-06-17 09:57:36 PDT
Don't throw away exception information for functions that use exceptions
Attachments
Patch
(5.21 KB, patch)
2010-06-17 10:02 PDT
,
Oliver Hunt
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-06-17 10:02:00 PDT
Created
attachment 59006
[details]
Patch
Eric Seidel (no email)
Comment 2
2010-09-02 13:53:41 PDT
I assume this was landed?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug