JavaScriptCore/bytecode/CodeBlock.cpp
@@ -1524,6 +1524,7 @@ void CodeBlock::reparseForExceptionInfoIfNecessary(CallFrame* callFrame)
     if (m_exceptionInfo)
         return;
 
+    ASSERT(!m_rareData || !m_rareData->m_exceptionHandlers.size());
     ScopeChainNode* scopeChain = callFrame->scopeChain();
     if (m_needsFullScopeChain) {
         ScopeChain sc(scopeChain);
